Modifying the dotfiles scripts

--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -49,15 +49,15 @@ cursor_text_color #f8f8f2
 
 # Tab bar colors
 active_tab_foreground   #212337
-active_tab_background   #ebfafa
-inactive_tab_foreground #212337
-inactive_tab_background #7081d0
+active_tab_background   #04d1f9
+inactive_tab_foreground #37f499
+inactive_tab_background #323449
 
 # Marks
 mark1_foreground #212337
 mark1_background #f9515d
 
 # Splits/Windows
-active_border_color #04d1f9
-inactive_border_color #BD93F9
+active_border_color #a48cf2
+inactive_border_color #212337
 
