Adding rofi and setting some window rules

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -18,15 +18,19 @@ monitor=eDP-1,1920x1080@60,0x0,1
 exec-once = ~/.config/hypr/scripts/wallpaper
 exec-once = ~/.config/waybar/launch.sh
 exec-once = ~/.config/hypr/scripts/lock.sh
+exec-once = ssh-agent -s
+
+# Enables inhibit_idle when playing audio
+exec = sway-audio-idle-inhibit
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = spacedrive
-$menu = wofi --show drun
-$browser = brave
+$fileManager = thunar
+$menu = ~/.config/rofi/launchers/type-1/launcher.sh
+$browser = firefox
 
 # Some default env vars.
 env = XCURSOR_SIZE,15
@@ -47,7 +51,7 @@ input {
         tap-to-click = true
     }
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 1 # -1.0 - 1.0, 0 means no modification.
 }
 
 general {
@@ -73,7 +77,7 @@ decoration {
     blur {
         enabled = true
         size = 3
-        passes = 2
+        passes = 6
         
         new_optimizations = on
     }
@@ -133,14 +137,21 @@ device {
 # windowrulev2 = float,class:^(-itty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-windowrulev2 = opacity 0.93 .9,class:^(kitty)$
-
+windowrulev2 = opacity 0.70 .65,class:^(kitty)$
+windowrulev2 = workspace 1, class:^(kitty)$
+windowrulev2 = workspace 2, class:^(firefox)$
+windowrulev2 = workspace 3, class:^(discord)$
+windowrulev2 = workspace 4, class:^(Spotify)$
+windowrulev2 = workspace 5, class:^(qemu)$
+windowrulev2 = fullscreen, class:^(qemu)$
+windowrulev2 = stayfocused, class:^(Rofi)$
+windowrulev2 = forceinput, class:^(Rofi)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, RETURN, exec, $terminal -o font_size=14
+bind = $mainMod, RETURN, exec, $terminal -o font_size=11
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, W, killactive,
 bind = $mainMod, M, exit,
@@ -154,15 +165,19 @@ bind = $mainMod SHIFT, P, exec, systemctl poweroff
 bind = $mainMod SHIFT, Q, exec, systemctl reboot
 bind = $mainMod, TAB, workspace, previous
 
+bind = $mainMod, K, exec, ~/.config/hypr/scripts/launch_Vm_Kali.sh
+
 bind = $mainMod, H, exec, pkill waybar
 bind = $mainMod, U, exec, ~/.config/waybar/launch.sh
+
+bind = $mainMod SHIFT, M, exec, LD_PRELOAD=/usr/local/lib/spotify-adblock.so spotify
 
 bind = $mainMod, L, exec, swaylock
 bind = $mainMod, Q, exec, wlogout
 
 bind = $mainMod, D, exec, discord
 
-bind =$mainMod, S, exec, grim
+bind = $mainMod SHIFT, G, exec, grim
 
 bind = , XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/volume --inc 
 bind = , XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/volume --dec 
