--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -19,10 +19,11 @@ exec-once = ~/.config/hypr/scripts/wallpaper
 exec-once = ~/.config/waybar/launch.sh
 exec-once = ~/.config/hypr/scripts/lock.sh
 exec-once = ssh-agent -s
+exec-once = hyprpm enable Hyprspace
 
 # Enables inhibit_idle when playing audio
 exec = sway-audio-idle-inhibit
-
+exec-once = hyprctl setcursor Nordzy-cursors-hyprcursor 24
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
@@ -30,7 +31,7 @@ exec = sway-audio-idle-inhibit
 $terminal = kitty
 $fileManager = thunar
 $menu = ~/.config/rofi/launchers/type-1/launcher.sh
-$browser = firefox
+$browser = vivaldi
 
 # Some default env vars.
 env = XCURSOR_SIZE,15
@@ -41,17 +42,17 @@ input {
     kb_layout = us
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = caps:swapescape
     kb_rules =
 
-    follow_mouse = 1
+    # force_no_accel = true
 
     touchpad {
         natural_scroll = false
         tap-to-click = true
     }
 
-    sensitivity = 1 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0.5 # -1.0 - 1.0, 0 means no modification.
 }
 
 general {
@@ -68,6 +69,33 @@ general {
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 }
+
+plugin {
+    overview {
+        reverseSwipe = yes
+        overrideGaps = yes
+        gapsIn = 5
+        gapsOut = 3
+        panelHeight = 190
+        workspaceMargin = 5
+    }
+}
+
+# bind = SUPER, grave, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
+
+# plugin {
+#     hyprexpo {
+#         columns = 3
+#         gap_size = 5
+#         bg_col = rgb(111111)
+#         workspace_method = center current # [center/first] [workspace] e.g. first 1 or center m+1
+#
+#         enable_gesture = true # laptop touchpad, 4 fingers
+#         gesture_distance = 300 # how far is the "max"
+#         gesture_positive = true # positive = swipe down. Negative = swipe up.
+#     }
+# }
+
 
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
@@ -116,6 +144,7 @@ master {
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
+    workspace_swipe_fingers = 3
     workspace_swipe = true 
 }
 
@@ -128,7 +157,7 @@ misc {
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device {
     name = epic-mouse-v1
-    sensitivity = -0.5
+    sensitivity = 1
 }
 
 # Example windowrule v1
@@ -140,23 +169,29 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2 = opacity 0.70 .65,class:^(kitty)$
 windowrulev2 = workspace 1, class:^(kitty)$
 windowrulev2 = workspace 2, class:^(firefox)$
+windowrulev2 = workspace 2, class:^(Vivaldi-stable)$
 windowrulev2 = workspace 3, class:^(discord)$
+windowrulev2 = workspace 3, class:^(whatsdesk)$
+windowrulev2 = workspace 3, class:^(org.telegram.desktop)$
 windowrulev2 = workspace 4, class:^(Spotify)$
 windowrulev2 = workspace 5, class:^(qemu)$
 windowrulev2 = fullscreen, class:^(qemu)$
 windowrulev2 = stayfocused, class:^(Rofi)$
 windowrulev2 = forceinput, class:^(Rofi)$
+# windowrulev2 = opacity 0.80, 0.75, class:^(firefox)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, RETURN, exec, $terminal -o font_size=11
+bind = $mainMod, RETURN, exec, $terminal -o font_size=13
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, W, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, V, togglefloating
+bind = $mainMod, F, fullscreen
+bind = $mainMod SHIFT, F, fakefullscreen
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
