Making changes to the configs

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,7 +8,7 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=eDP-1,1920x1080@60,0x0,1
+monitor=eDP-1,1920x1080@60,auto,1,bitdepth,10
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -17,9 +17,12 @@ monitor=eDP-1,1920x1080@60,0x0,1
 # exec-once = waybar & hyprpaper & firefox
 exec-once = ~/.config/hypr/scripts/wallpaper
 exec-once = ~/.config/waybar/launch.sh
-exec-once = ~/.config/hypr/scripts/lock.sh
 exec-once = ssh-agent -s
 exec-once = hyprpm enable Hyprspace
+exec-once = ~/.config/hypr/scripts/ch_wallpaper.sh
+exec-once = sudo kanata -c /home/alpha/.config/kanata/config.kbd
+exec-once = swaync
+exec-once = hypridle &
 
 # Enables inhibit_idle when playing audio
 exec = sway-audio-idle-inhibit
@@ -31,7 +34,8 @@ exec-once = hyprctl setcursor Nordzy-cursors-hyprcursor 24
 $terminal = kitty
 $fileManager = thunar
 $menu = ~/.config/rofi/launchers/type-1/launcher.sh
-$browser = vivaldi
+$browser = zen-browser
+$taskmanager = kitty btop
 
 # Some default env vars.
 env = XCURSOR_SIZE,15
@@ -42,7 +46,7 @@ input {
     kb_layout = us
     kb_variant =
     kb_model =
-    kb_options = caps:swapescape
+    # kb_options = caps:swapescape
     kb_rules =
 
     # force_no_accel = true
@@ -59,7 +63,7 @@ general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     gaps_in = 0
-    gaps_out = 5
+    gaps_out = 0
     border_size = 1
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
@@ -72,7 +76,7 @@ general {
 
 plugin {
     overview {
-        reverseSwipe = yes
+        # reverseSwipe = yes
         overrideGaps = yes
         gapsIn = 5
         gapsOut = 3
@@ -81,20 +85,20 @@ plugin {
     }
 }
 
-# bind = SUPER, grave, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
+bind = SUPER, grave, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
 
-# plugin {
-#     hyprexpo {
-#         columns = 3
-#         gap_size = 5
-#         bg_col = rgb(111111)
-#         workspace_method = center current # [center/first] [workspace] e.g. first 1 or center m+1
-#
-#         enable_gesture = true # laptop touchpad, 4 fingers
-#         gesture_distance = 300 # how far is the "max"
-#         gesture_positive = true # positive = swipe down. Negative = swipe up.
-#     }
-# }
+plugin {
+    hyprexpo {
+        columns = 3
+        gap_size = 5
+        bg_col = rgb(111111)
+        workspace_method = center current # [center/first] [workspace] e.g. first 1 or center m+1
+
+        enable_gesture = true # laptop touchpad, 4 fingers
+        gesture_distance = 300 # how far is the "max"
+        gesture_positive = true # positive = swipe down. Negative = swipe up.
+    }
+}
 
 
 decoration {
@@ -104,10 +108,11 @@ decoration {
 
     blur {
         enabled = true
-        size = 3
-        passes = 6
-        
+        size = 4
+        passes = 3
         new_optimizations = on
+        xray = true
+        ignore_opacity = true
     }
 
     drop_shadow = true
@@ -137,10 +142,10 @@ dwindle {
     preserve_split = true # you probably want this
 }
 
-master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
-}
+# master {
+#     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
+#     new_is_master = true
+# }
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
@@ -166,9 +171,9 @@ device {
 # windowrulev2 = float,class:^(-itty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-windowrulev2 = opacity 0.70 .65,class:^(kitty)$
+windowrulev2 = opacity 0.95 .92,class:^(kitty)$
 windowrulev2 = workspace 1, class:^(kitty)$
-windowrulev2 = workspace 2, class:^(firefox)$
+windowrulev2 = workspace 2, class:^(zen-alpha)$
 windowrulev2 = workspace 2, class:^(Vivaldi-stable)$
 windowrulev2 = workspace 3, class:^(discord)$
 windowrulev2 = workspace 3, class:^(whatsdesk)$
@@ -176,8 +181,9 @@ windowrulev2 = workspace 3, class:^(org.telegram.desktop)$
 windowrulev2 = workspace 4, class:^(Spotify)$
 windowrulev2 = workspace 5, class:^(qemu)$
 windowrulev2 = fullscreen, class:^(qemu)$
+windowrulev2 = workspace 6, class:^(kitty)$, title:^(btop)$, initialTitle:^(kitty)$
 windowrulev2 = stayfocused, class:^(Rofi)$
-windowrulev2 = forceinput, class:^(Rofi)$
+windowrulev2 = workspace 5, class:^(obsidian)$
 # windowrulev2 = opacity 0.80, 0.75, class:^(firefox)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -191,36 +197,41 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating
 bind = $mainMod, F, fullscreen
-bind = $mainMod SHIFT, F, fakefullscreen
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+# bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod SHIFT, R, exec, hyprctl reload
 bind = $mainMod SHIFT, P, exec, systemctl poweroff
 bind = $mainMod SHIFT, Q, exec, systemctl reboot
 bind = $mainMod, TAB, workspace, previous
+bind = $mainMod, T, exec, $taskmanager
 
-bind = $mainMod, K, exec, ~/.config/hypr/scripts/launch_Vm_Kali.sh
 
-bind = $mainMod, H, exec, pkill waybar
+# bind = $mainMod, K, exec, ~/.config/hypr/scripts/launch_Vm_Kali.sh
+
+bind = $mainMod SHIFT, H, exec, pkill waybar
 bind = $mainMod, U, exec, ~/.config/waybar/launch.sh
 
 bind = $mainMod SHIFT, M, exec, LD_PRELOAD=/usr/local/lib/spotify-adblock.so spotify
 
-bind = $mainMod, L, exec, swaylock
+bind = $mainMod SHIFT, L, exec, hyprlock
 bind = $mainMod, Q, exec, wlogout
 
 bind = $mainMod, D, exec, discord
 
-bind = $mainMod SHIFT, G, exec, grim
+bind = , Print, exec, hyprshot -m window
+bind = SHIFT, Print, exec, hyprshot -m region
 
 bind = , XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/volume --inc 
 bind = , XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/volume --dec 
+bind = $mainMod, bracketLeft, exec, ~/.config/hypr/scripts/volume --dec 
+bind = $mainMod, bracketRight, exec, ~/.config/hypr/scripts/volume --inc 
 bind = , XF86AudioMicMute, exec, ~/.config/hypr/scripts/volume --toggle-mic 
 bind = , XF86AudioMute, exec, ~/.config/hypr/scripts/volume --toggle
 
 bind = , XF86AudioPlay, exec, playerctl play-pause
 bind = , XF86AudioPause, exec, playerctl play-pause
+bind = , Pause, exec, playerctl play-pause
 bind = , XF86AudioNext, exec, playerctl next
 bind = , XF86AudioPrev, exec, playerctl previous
 
@@ -228,10 +239,10 @@ bind = , XF86MonBrightnessUp, exec, ~/.config/hypr/scripts/backlight --inc
 bind = , XF86MonBrightnessDown, exec, ~/.config/hypr/scripts/backlight --dec
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, j, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -268,3 +279,5 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
