--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,10 +16,13 @@ bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
 bind -r l resize-pane -R 5
 bind -r h resize-pane -L 5
-
 bind -r m resize-pane -Z
 
 set -g mouse on
+
+# Set tab and window indexes to start at 1
+set -g base-index 1
+setw -g pane-base-index 1
 
 set-window-option -g mode-keys vi
 
@@ -33,8 +36,6 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
-set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @catppuccin_flavour 'mocha' 
