Making changes to the configs

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -9,6 +9,7 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=eDP-1,1920x1080@60,auto,1,bitdepth,10
+monitor=HDMI-A-1,1280x720@60,auto,1,bitdepth,10
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
