--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -38,6 +38,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @catppuccin_flavour 'mocha' 
 set -g @catppuccin_status_left 'session user'
 set -g @catppuccin_status_right 'directory battery date_time'
