--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -16,12 +16,13 @@ monitor=HDMI-A-1,1280x720@60,auto,1,bitdepth,10
 
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = ~/.config/hypr/scripts/wallpaper
 exec-once = ~/.config/waybar/launch.sh
 exec-once = ssh-agent -s
 exec-once = hyprpm enable Hyprspace
 exec-once = ~/.config/hypr/scripts/ch_wallpaper.sh
-exec-once = sudo kanata -c /home/alpha/.config/kanata/config.kbd
+# exec-once = sudo kanata -c /home/alpha/.config/kanata/config.kbd
 exec-once = swaync
 exec-once = hypridle &
 
@@ -86,20 +87,20 @@ plugin {
     }
 }
 
-bind = SUPER, grave, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
+# bind = SUPER, grave, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
 
-plugin {
-    hyprexpo {
-        columns = 3
-        gap_size = 5
-        bg_col = rgb(111111)
-        workspace_method = center current # [center/first] [workspace] e.g. first 1 or center m+1
-
-        enable_gesture = true # laptop touchpad, 4 fingers
-        gesture_distance = 300 # how far is the "max"
-        gesture_positive = true # positive = swipe down. Negative = swipe up.
-    }
-}
+# plugin {
+#     hyprexpo {
+#         columns = 3
+#         gap_size = 5
+#         bg_col = rgb(111111)
+#         workspace_method = center current # [center/first] [workspace] e.g. first 1 or center m+1
+#
+#         enable_gesture = true # laptop touchpad, 4 fingers
+#         gesture_distance = 300 # how far is the "max"
+#         gesture_positive = true # positive = swipe down. Negative = swipe up.
+#     }
+# }
 
 
 decoration {
@@ -116,10 +117,10 @@ decoration {
         ignore_opacity = true
     }
 
-    drop_shadow = true
-    shadow_range = 2
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    # drop_shadow = true
+    # shadow_range = 2
+    # shadow_render_power = 3
+    # col.shadow = rgba(1a1a1aee)
 }
 
 animations {
@@ -171,8 +172,14 @@ device {
 # Example windowrule v2
 # windowrulev2 = float,class:^(-itty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+windowrulev2 = opacity 0.0 override, class:^(xwaylandvideobridge)$
+windowrulev2 = noanim, class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus, class:^(xwaylandvideobridge)$
+windowrulev2 = maxsize 1 1, class:^(xwaylandvideobridge)$
+windowrulev2 = noblur, class:^(xwaylandvideobridge)$
+windowrulev2 = nofocus, class:^(xwaylandvideobridge)$
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-windowrulev2 = opacity 0.95 .92,class:^(kitty)$
+windowrulev2 = opacity 0.97 .98,class:^(kitty)$
 windowrulev2 = workspace 1, class:^(kitty)$
 windowrulev2 = workspace 2, class:^(zen-alpha)$
 windowrulev2 = workspace 2, class:^(Vivaldi-stable)$
@@ -185,7 +192,7 @@ windowrulev2 = fullscreen, class:^(qemu)$
 windowrulev2 = workspace 6, class:^(kitty)$, title:^(btop)$, initialTitle:^(kitty)$
 windowrulev2 = stayfocused, class:^(Rofi)$
 windowrulev2 = workspace 5, class:^(obsidian)$
-# windowrulev2 = opacity 0.80, 0.75, class:^(firefox)$
+windowrulev2 = opacity 0.95, 0.90, class:^(zen-alpha)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
